# lab06_timp

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md
.github/workflows/: build.yml  deb.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  install_manifest.txt  solver_app
_build /: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_build /formatter_ex/formatter/: Makefile
_build /solver_lib/: cmake_install.cmake
_build/formatter_ex/: Makefile  cmake_install.cmake
_build/formatter_ex/formatter/: cmake_install.cmake
_build/solver_lib/: Makefile
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
